ajout cityOfPays qui affiche toutes les villes

--- a/detailPays.css
+++ b/detailPays.css
@@ -70,7 +70,7 @@ button:hover {
 }
 
 .details th, .details td {
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     padding: 8px;
     text-align: center;
 }
@@ -92,7 +92,7 @@ button:hover {
 .actualisees input {
     margin-bottom: 10px;
     padding: 8px;
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
     border-radius: 4px;
 }
 
