--- a/detailPays.css
+++ b/detailPays.css
@@ -31,7 +31,7 @@ table th {
 }
 
 /* Style pour le bouton "Voir les villes" */
-button {
+.btndetailPays {
     display: block;
     width: 100%;
     padding: 10px;
